# base

./: App.tsx  package.json
android/: gradle.properties
ios/base.xcodeproj/: project.pbxproj
modules/screen-brightness/: package.json  react-native-screen-brightness.podspec
modules/screen-brightness/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
modules/screen-brightness/android/src/main/: AndroidManifest.xml
modules/screen-brightness/android/src/main/java/com/screenbrightness/: ScreenBrightnessModule.java  ScreenBrightnessPackage.java
modules/screen-brightness/cpp/: react-native-screen-brightness.cpp  react-native-screen-brightness.h
modules/screen-brightness/ios/: ScreenBrightness.h  ScreenBrightness.mm
modules/screen-brightness/src/: NativeScreenBrightness.ts  index.tsx
